<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/astronautDetailImageView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/noimage" />


    <TextView
        android:id="@+id/nameDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/place_holder_name"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/astronautDetailImageView" />

    <TextView
        android:id="@+id/nationalityDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/place_holder_nationality"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameDetailTextView" />

    <TextView
        android:id="@+id/dobDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/place_holder_dob"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/nationalityDetailTextView" />

    <TextView
        android:id="@+id/bioDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/place_holder_bio"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/dobDetailTextView" />

    <ProgressBar
        android:id="@+id/progressLoader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/astronautDetailGroup"
        android:layout_width="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="astronautDetailImageView,nameDetailTextView,nationalityDetailTextView,dobDetailTextView,bioDetailTextView"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>